--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,12 @@
                 <version>${easyb.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>                
+                <groupId>org.apache.maven.plugins</groupId>                
+                <artifactId>maven-release-plugin</artifactId>                
+                <version>2.5</version>                
+                          
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
